# chain-replication-experiment

./: .gitignore  .travis.yml  Cargo.toml  NOTES.md  Procfile  README.md  build.rs  docker-compose.yml  log.debug.toml  log.rel.toml  log.toml  rustfmt.toml
client/: Cargo.toml
client-proto/: Cargo.toml  build.rs
client-proto/src/: lib.rs  messages.rs  messages.rs.in
client/examples/: consumer.rs  producer.rs
client/src/: common.rs  consumer.rs  lib.rs  producer.rs
doc/: NOTES.md  Vastatrix.monopic
docker-env/: Dockerfile
src/: bovine.rs  client.rs  client_conn.rs  config.rs  config_data.in.rs  config_data.rs.in  consumer.rs  data.in.rs  data.rs  data.rs.in  downstream_conn.rs  errors.rs  event_handler.rs  fatclient.rs  hosting.rs  lib.rs  line_conn.rs  listener.rs  main.rs  messages.in.rs  replica.rs  replica_test_data.in.rs  replication_log.rs  slob.rs  store.rs  thick_client.rs  upstream_conn.rs  view_management.rs
src/proxy/: client.rs  messages.in.rs  messages.rs  mod.rs  server.rs
src/replica/: client.rs  messages.in.rs  messages.rs  mod.rs  replicator.rs  replicator2.rs  server.rs
src/sexp_proto/: client.rs  errors.rs  mod.rs  server.rs  sexp_proto.rs
src/tail/: client.rs  messages.in.rs  messages.rs  mod.rs  server.rs
src/view_management/: etcd.rs  mod.rs  views.rs
tests/: consumer.rs  lib.rs  replica.rs  replication_log.rs  smoketest.rs  store.rs
tools/: gv-trace.py  symbolize-perf.py
