[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
build = "build.rs"
name = "vastatrix"
version = "0.1.0"

[[bin]]
name = "chain-repl"

[build-dependencies]
env_logger = "0.3.2"
log = "*"
tempfile = "2.1.3"

[build-dependencies.serde_codegen]
default-features = false
optional = true
version = "0.7.2"

[build-dependencies.syntex]
default-features = false
optional = true
version = "0.31.0"

[dependencies]
byteorder = "0.4.2"
bytes = "0.2.10"
clap = "2.3.0"
error-chain = "0.1.12"
lmdb-zero = "0.1.0"
log = "*"
mio = "0.4.1"
petgraph = "0.2.7"
quickcheck = "0.2.24"
rand = "0.3.14"
serde = "0.7.0"
serde_json = "0.7.0"
slab = "0.1.3"
tempdir = "0.3.4"
time = "0.1.34"

[dependencies.crexp_client_proto]
optional = false
path = "client-proto"

[dependencies.etcd]
default-features = false
version = "0.5.0"

[dependencies.hex-slice]
git = "https://github.com/cstorey/hex-slice"
optional = false

[dependencies.hybrid-clocks]
features = ["serde"]
version = "0.3.0"

[dependencies.log4rs]
features = ["toml"]
version = "*"

[dependencies.serde_macros]
optional = true
version = "0.7.2"

[dependencies.spki-sexp]
git = "https://github.com/cstorey/spki-sexp.rs.git"
optional = false

[dev-dependencies]
env_logger = "0.3.2"
sat = { git = "https://github.com/cstorey/sat.git" }

[dev-dependencies.bformulae]
git = "https://github.com/cstorey/bformulae.git"
optional = false

[features]
benches = []
default = ["syntex", "serde_codegen/default", "etcd/default"]
nightly = ["serde_macros", "etcd/nightly"]

[profile]

[profile.release]
debug = true

[[test]]
name = "lib"
