[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
build = "build.rs"
name = "vastatrix"
version = "0.1.0"

[build-dependencies]
env_logger = "0.3.0"
log = "0.3.6"
serde_codegen = "0.8.11"
tempfile = "2.1.4"

[dependencies]
clap = "2.14.0"
env_logger = "0.3.0"
error-chain = "0.5.0"
etcd = "0.5.5"
futures = "0.1"
futures-cpupool = "0.1.2"
log = "0.3.6"
rand = "0.3.14"
serde = "0.8.10"
serde_json = "0.8.2"
stable_bst = "0.2.0"
take = "0.1.0"
time = "0.1.35"
tokio-core = "0.1"
void = "1.0.2"

[dependencies.bytes]
git = "https://github.com/carllerche/bytes.git"

[dependencies.spki-sexp]
git = "https://github.com/cstorey/spki-sexp.rs.git"
optional = false

[dependencies.tokio-middleware]
git = "https://github.com/tokio-rs/tokio-middleware"

[dependencies.tokio-proto]
git = "https://github.com/cstorey/tokio-proto"

[dependencies.tokio-service]
git = "https://github.com/tokio-rs/tokio-service"

[dependencies.tokio-timer]
git = "https://github.com/tokio-rs/tokio-timer"
