[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "crexp_client"
version = "0.1.0"

[dependencies]
clap = "2.3.0"
gj = "0.2.0"
gjio = "0.1.0"
quick-error = "1.0.0"
serde = "0.7.0"

[dependencies.crexp_client_proto]
default-features = false
optional = false
path = "../client-proto"

[dependencies.spki-sexp]
git = "https://github.com/cstorey/spki-sexp.rs.git"
optional = false

[features]
default = ["crexp_client_proto/default"]
nightly = ["crexp_client_proto/nightly"]
