[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "crexp_client"
version = "0.1.0"

[dependencies]
clap = "2.3.0"
eventual = "0.1.7"
log = "0.3.6"
quick-error = "1.0.0"
serde = "0.7.0"

[dependencies.crexp_client_proto]
default-features = false
optional = false
path = "../client-proto"

[dependencies.hex-slice]
git = "https://github.com/cstorey/hex-slice"
optional = false

[dependencies.spki-sexp]
git = "https://github.com/cstorey/spki-sexp.rs.git"
optional = false

[dev-dependencies]
env_logger = "0.3.3"
time = "0.1.35"

[features]
default = ["crexp_client_proto/default"]
nightly = ["crexp_client_proto/nightly"]
